add first chapter

--- a/preamble.tex
+++ b/preamble.tex
@@ -98,6 +98,14 @@
 
 %linear algebra
 
+
+% real set, the R
+\newcommand\realset[0]{\mathbb{R}}
+
+% complex set, the C
+\newcommand\complexset[0]{\mathbb{C}}
+
+
 % null space, the N
 \newcommand\nullspace[1]{\mathcal{N}(#1)}
 
