refactor the note

--- a/all.tex
+++ b/all.tex
@@ -10,9 +10,9 @@
 \maketitle
 \tableofcontents
 
-\input{introduction.tex}
 \input{basics.tex}
-\input{feed_forward_network.tex}
+\input{neural_network.tex}
+\input{training.tex}
 
 
 \input{postamble}
