--- a/preamble.tex
+++ b/preamble.tex
@@ -73,6 +73,9 @@
 \usepackage{epsfig}
 
 
+% do not float the table
+\usepackage{float}
+
 
 % user MathTime professional 2. so expensive...
 \usepackage{newtxtext}
