--- a/preamble.tex
+++ b/preamble.tex
@@ -181,6 +181,10 @@
 %\exp
 
 
+% expectation
+%\newcommand\expectation[1]{\mathbb{E}\left[{#1}\right]}
+\newcommand\expectation[1]{\mathbb{E}[{#1}]}
+
 
 % argmin and argmax
 \newcommand\argmin[1]{\mathop{\arg\min}\limits_{#1}}
