--- a/training.tex
+++ b/training.tex
@@ -161,13 +161,26 @@ It is called $\mathcal{l}_1$ regularization
 
 Co-adaptation cannot be solved by $\mathcal{l}_1$ or $\mathcal{l}_2$ regularization. So this problem cannot be solved by increasing the size of the model. Dropout solved the co-adaptation problem and is used very widely.
 
-Dropout will set weights to zero based on Bernoulli noise $1-p$ ($p$ is the probability that a weight will be dropped out). The practice is :
+Dropout will set the output of hidden layer to zero based on Bernoulli noise $1-p$ ($p$ is the probability that a weight will be dropped out). The practice is :
 \begin{enumerate}
     \item $p=0.5$ for hidden layers
     \item $p= 0.25$ for input layer
 \end{enumerate}
 
-At test time, we need to disable the dropout and scale the weight by $W_{ij}^{'} = (1-p) W_{ij}$. 
+What it does it to add noise to $x$ to create $x^{'}$ so $\expectation{x^{'}}= x$. So we need to change the weight during training:
+\begin{equation}
+    \begin{aligned}
+        x^{'} = \begin{cases}
+            0 & \text{ with probability }  p \\
+            \displaystyle \frac{x}{1-p} & \text{ with probability }  1-p
+        \end{cases}
+    \end{aligned}
+\end{equation}
+
+Dropout is usually used in fully-connected hidden layers. It does not change the weight or bias. 
+
+It is only used in training.
+
 
 
 
